2007-03-27  Dan Williams  <dcbw@redhat.com>

	* include/NetworkManager.h
		- Add a "post-ip" stage in activation that happens after an IP address
			has been configured.  Mesh bits will look for a mesh portal here,
			or it could be used to log in to a Wi-Fi portal or something.

	* src/nm-device.[ch]
		- Add the "post-ip" activation stage

	* src/nm-device-802-11-mesh-olpc.[ch]
		- Implement mesh portal (MPP) detection
		- Random channel on interface startup
		- Fix scanning inhibition & interaction between ethernet and mesh device
		- get/set_80211_freq() -> get/set_80211_channel()
		- Kill avahi-autoipd instead of telling it to terminate, because it's
			UNBIND/STOP signal comes in way to late.  Sort of a hack.

2007-03-22  Dan Williams  <dcbw@redhat.com>

	There needs to be some coordination between the mesh device and the
	normal 802.11 device.  The normal device shouldn't scan when the mesh
	device is active, and the mesh device shouldn't be searching for mesh
	channels when the 802.11 device is scanning or activating.

	- src/nm-device.c
		- Add 'activation-started'/'activation-done' signals on devices

	- src/nm-device-802-11-wireless.c
		- Add 'scan-started' and 'scan-done' signals
		- Add a scan approval hook that allows other devices to delay
			scans on the 802.11 wireless device

	- src/nm-device-802-11-mesh-olpc.c
		- Add bits to allow inhibiting of scans on the 802.11 wireless
			device when the mesh device is active
		- Add get/set frequency functions

2007-03-19  Dan Williams  <dcbw@redhat.com>

	- Fill in most of Mesh device class
	- Add infrastructure for using avahi-autoipd for IPv4 Link Local addresses

2007-03-18  Dan Williams  <dcbw@redhat.com>

	- Add a skeleton OLPC Mesh device
	- Add notifiers when devices get added removed, because the OLPC mesh device
		needs to find the ethX interface on the same physical device so they
		can coordinate

2007-03-17  Dan Williams  <dcbw@redhat.com>
